--- a/info/templates/index.html
+++ b/info/templates/index.html
@@ -93,7 +93,7 @@
             </div>
             <ul class="rank_list">
                 {% for news in data.news_info %}
-                    <li><span class="first">{{ loop.index }}</span><a href="#">{{ news.title }}</a></li>
+                    <li><span class="{{ loop.index | do_index_class }}">{{ loop.index }}</span><a href="#">{{ news.title }}</a></li>
                 {% endfor %}
 
 {#                <li><span class="first">1</span><a href="#">势如破竹！人民币再度连闯四道关口 在岸、离岸双双升破6.42</a></li>#}
