--- a/info/templates/news/user.html
+++ b/info/templates/news/user.html
@@ -7,9 +7,14 @@
 {% block contentBlock %}
         <div class="user_menu_con fl">
 			<div class="user_center_pic">
-				<img src="../../static/news/images/user_pic.png" alt="用户图片">
-			</div>
-			<div class="user_center_name">用户张山</div>
+                <img src={% if data.user_info.avatar_url %}
+                    {{ data.user_info.avatar_url }}
+                {% else %}
+                    "../../static/news/images/user_pic.png"
+                {% endif %} alt="用户图片">
+            </div>
+
+            <div class="user_center_name">{{ data.user_info.nick_name }}</div>
 
 			<ul class="option_list">
 				<li class="active"><a href="../../static/news/html/user_base_info.html" target="main_frame">基本资料</a></li>
