--- a/info/templates/base.html
+++ b/info/templates/base.html
@@ -25,7 +25,7 @@
                 <!-- 用户登录后显示下面，隐藏上面 -->
                 <div class="user_login fr">
                     <img src="{% if data.user_info.avatar_url %}{{ data.user_info.avatar_url }}{% else %}../../static/news/images/person01.png{% endif %}" class="lgin_pic">
-                    <a href="{{ url_for("profile.user_info") }}">{{ data.user_info.nick_name }}</a>
+                    <a id="nick_name" href="{{ url_for("profile.user_info") }}">{{ data.user_info.nick_name }}</a>
                     <a href="javascript:;" onclick="login_out()">退出</a>
                 </div>
             {% else %}
