--- a/info/templates/news/user_pic_info.html
+++ b/info/templates/news/user_pic_info.html
@@ -15,7 +15,7 @@
         <h3>头像设置</h3>
         <div class="form-group">
             <label class="label01">当前图像：</label>
-            <img src="../../static/news/images/user_pic.png" alt="用户图片" class="now_user_pic">
+            <img src="{{ data.user_info.avatar_url }}" alt="用户图片" class="now_user_pic">
         </div>
         <div class="form-group">
             <label>上传图像：</label>
