--- a/info/templates/admin/login.html
+++ b/info/templates/admin/login.html
@@ -11,10 +11,13 @@
 		<img src="../../static/admin/images/logo.png" alt="">
 	</div>	
 	<form method="post" class="login_form">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
 		<h1 class="login_title">用户登录</h1>
 		<input type="text" name="username" placeholder="用户名" class="input_txt">
 		<input type="password" name="password" placeholder="密码" class="input_txt">
-		<div class="error_tip">错误提示</div>
+		{% if errmsg %}
+            <div class="error_tip" style="display: block">{{ errmsg }}</div>
+        {% endif %}
 		<input type="submit" value="登 录" class="input_sub">
 	</form>
 	<div class="login_bg"></div>
