--- a/info/templates/base.html
+++ b/info/templates/base.html
@@ -8,6 +8,10 @@
     <script type="text/javascript" src="../static/news/js/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="../static/news/js/main.js"></script>
 
+    {% block cssBlock %}
+
+    {% endblock %}
+
     {% block scriptBlock %}
 
     {% endblock %}
