--- a/info/templates/news/other.html
+++ b/info/templates/news/other.html
@@ -51,22 +51,26 @@
             <div class="other_collect">
                 <h3>他的文章</h3>
                 <ul class="article_list">
-                    <li><a href="#">智能音箱“不智能”：这次轮到三星语音助手Bixby被吐槽了</a><span>2018-1-17</span></li>
-                    <li><a href="#">智能音箱“不智能”：这次轮到三星语音助手Bixby被吐槽了</a><span>2018-1-17</span></li>
-                    <li><a href="#">智能音箱“不智能”：这次轮到三星语音助手Bixby被吐槽了</a><span>2018-1-17</span></li>
-                    <li><a href="#">智能音箱“不智能”：这次轮到三星语音助手Bixby被吐槽了</a><span>2018-1-17</span></li>
-                    <li><a href="#">智能音箱“不智能”：这次轮到三星语音助手Bixby被吐槽了</a><span>2018-1-17</span></li>
-                    <li><a href="#">智能音箱“不智能”：这次轮到三星语音助手Bixby被吐槽了</a><span>2018-1-17</span></li>
+                    {% for new in data.news %}
+                        <li><a href="/news/{{ new.id }}">{{ new.title }}</a><span>{{ new.create_time }}</span></li>
+                    {% endfor %}
+{#                    <li><a href="#">智能音箱“不智能”：这次轮到三星语音助手Bixby被吐槽了</a><span>2018-1-17</span></li>#}
+{#                    <li><a href="#">智能音箱“不智能”：这次轮到三星语音助手Bixby被吐槽了</a><span>2018-1-17</span></li>#}
+{#                    <li><a href="#">智能音箱“不智能”：这次轮到三星语音助手Bixby被吐槽了</a><span>2018-1-17</span></li>#}
+{#                    <li><a href="#">智能音箱“不智能”：这次轮到三星语音助手Bixby被吐槽了</a><span>2018-1-17</span></li>#}
+{#                    <li><a href="#">智能音箱“不智能”：这次轮到三星语音助手Bixby被吐槽了</a><span>2018-1-17</span></li>#}
+{#                    <li><a href="#">智能音箱“不智能”：这次轮到三星语音助手Bixby被吐槽了</a><span>2018-1-17</span></li>#}
                 </ul>
 
                 <div id="pagination" class="page"></div>
                 <script>
                     $(function(){
                         $("#pagination").pagination({
-                            currentPage: 2,
-                            totalPage: 3,
+                            currentPage: {{ data.current_page }},
+                            totalPage: {{ data.total_page }},
                             callback: function(current) {
-                                getNewsList(current)
+{#                                getNewsList(current)#}
+                                window.location.href = "/profile/other_info?p=" + current;
                             }
                         });
                     });
